--- a/hws/HW04.md
+++ b/hws/HW04.md
@@ -2,7 +2,7 @@
 layout: default
 title: Recursion
 type: Homework
-number: 03
+number: 04
 active_tab: homework
 release_date: 2023-02-16
 due_date: 2023-02-22 23:59:00EDT
@@ -54,7 +54,7 @@ You can download the materials for this assignment here:
 {{page.type}} {{page.number}}: {{page.title}}
 =============================================================
 
-In this assignment you will be working with methods, `Strings`, and `Arrays`. You will be implementing the following methods recursively.
+In this assignment you will be working with methods, `Strings`, and `Arrays`. You will be implementing the following methods recursively. For some of these methods, it might be easier to create another method that is called recursively. For example, recall how in lecture 9 we created a recursive method called [`public static int sumArray(String[] list, int index)`](https://github.com/BMC-CS-113/class-examples-s23/blob/main/week5/SumInputRecursion.java ) to sum all of the values in an array. 
 
 
 > Requirements:
@@ -83,13 +83,15 @@ Write a program called `NumbersRecursion.java` that implements the following met
 
 Write a method called `previousEven` that takes in an integer and prints out all the previous even numbers.
 
-For example, `previousEven(6)` should print out `4 2`, `previousEven(9)` should print out `8 6 4 2`. Make sure to put a space between the numbers and print all the numbers on one line. 
+For example, `previousEven(6)` should print out `6 4 2`, `previousEven(9)` should print out `8 6 4 2 `. Make sure to put a space between the numbers and print all the numbers on one line. 
+
+It is ok if there is a space after the `2`.
 
 ### 1.2 productOfPreviousOdd
 
 Write a method called `productOfPreviousOdd` that takes in a number and returns the product of the previous odd numbers.  
 
-For example, `productOfPreviousOdd(9)` would return `105` because it would multiply `7` by `5` by `3` by `1`. 
+For example, `productOfPreviousOdd(9)` would return `945` because it would multiply `9` by `7` by `5` by `3` by `1`. 
 
 
 ### 1.3 sumOfPreviousN
@@ -111,7 +113,7 @@ Write a method called `removeLetter` that takes in a String and a letter and ret
 
 For example, `removeLetter("asdfghsassaaaae", 'a')` should return `sdfghssse`.
 
-### 2.2 removeLetters
+### 2.2 removeLetters (extra credit)
 
 Write a method called `removeLetters` that takes in a String and an array of letters and returns the String but will all instances of the letters removed.
 
@@ -156,33 +158,35 @@ Write a method called `avgIsopsephy` that takes in an array of words and returns
 
 ### 2.6 Reverse String
 
-Write a method called `reverseString ` that takes in a string and returns the reverse string. If the word does not contain 10 letters, return an empty string.
+Write a method called `reverseString ` that takes in a string and returns the reverse string.
 
 > Hint: String concatenation might be helpful here.
 
 
-# 2. Arrays
+## 3. Arrays
 
 In a file called `ArraysRecursion.java`, write the following methods.
 
-## 2.1 isPalindrome
+### 3.1 isPalindrome
 
 A palindrome is a word (or an ordered collection) that is the same backwords. For example, `madam` and `"a man, a plan, a canal – Panama` are both palindromes.
 
-### 2.1.2 isPalindrome characters
+#### 3.1.2 isPalindrome characters
 
-Write a method called `isPalondrome` that takes in an array of characters and returns true if the array is a palindrome. If the array is empty, you can return false.
-
-> Note, do not solve this by reversing the array and then comparing the two arrays.
-
-### 2.1.2 isPalindrome integers
-
-Write a method called `isPalondrome` that takes in an array of integers and returns true if the array is a palindrome. If the array is empty, you can return false.
+Write a method called `isPalindrome` that takes in an array of characters and returns true if the array is a palindrome. If the array is empty, the method should return `true` since that technically is a palindrome.
 
 > Note, do not solve this by reversing the array and then comparing the two arrays.
 
+**Updated 02/17 4:40pm** we changed the default be `true` for this and 3.1.3
 
-### 2.2 Sorted
+#### 3.1.3 isPalindrome integers
+
+Write a method called `isPalindrome` that takes in an array of integers and returns true if the array is a palindrome. If the array is empty, the method should return `true`.
+
+> Note, do not solve this by reversing the array and then comparing the two arrays.
+
+
+### 3.2 Sorted
 
 Write a method caled `isSorted` that takes in an array of integers and a boolean and determines if the list of numbers is sorted. If the boolean parameter is `true`, then the method should check if the numbers are sorted in ascending order (1234), if the parameter is `false`, then the method should check if the numbers are sorted in descending order (4321).  
 
