--- a/hws/HW04.md
+++ b/hws/HW04.md
@@ -115,12 +115,20 @@ For example, `removeLetter("asdfghsassaaaae", 'a')` should return `sdfghssse`.
 
 ### 2.2 removeLetters (extra credit)
 
-Write a method called `removeLetters` that takes in a String and an array of letters and returns the String but will all instances of the letters removed.
+Write a method called `removeLetters` that takes in a String and an array of letters and returns the String but with all instances of the letters removed.
 
-For example, `removeLetter("asdfghsassaaaae", ['a','s'])` should return `dfghe`.
+For example, `removeLetters("asdfghsassaaaae", ['a','s'])` should return `dfghe`.
 
-Your method can called `removeLetters` from 2.1
+Your method can `removeLetter` from 2.1
 
+**Update: 02/22: 8:30pm:** Even if you dont implement this method,
+make sure to include a method stub. The method stub should be:
+
+```
+public static String removeLetters(String haystack, char[] needlesToRemove) {
+  return "";
+}
+```
 
 ### 2.3 abecedarian
 
