--- a/hws/HW05.md
+++ b/hws/HW05.md
@@ -87,10 +87,10 @@ It is ok if there is a space after the `2`.
 
 ### 1.2 Previous odd
 
-Write a method called `previousOdd` that takes in an integer and prints out all the previous even numbers.
+Write a method called `previousOdd` that takes in an integer and prints out all the previous odd numbers.
 Implement this method using a **while loop**.
 
-For example, `previousEven(6)` should print out `5 3 1`, `previousOdd(9)` should print out `9 7 5 3 1`. Make sure to put a space between the numbers and print all the numbers on one line. 
+For example, `previousOdd(6)` should print out `5 3 1`, `previousOdd(9)` should print out `9 7 5 3 1`. Make sure to put a space between the numbers and print all the numbers on one line. 
 
 It is ok if there is a space after the `2`.
 
@@ -127,7 +127,9 @@ You can choose to use either a **while loop** or a **for loop**
 
 ## 3. Arrays
 
-In a file called `ArraysLoop.java`, write the following methods.
+In a file called `ArraysLoops.java`, write the following methods.
+
+**Update: 02/26 10am, changed the file name from `ArraysLoop.java` to `ArraysLoops.java`.**
 
 ### 3.1 isPalindrome
 
