--- a/hws/HW00.md
+++ b/hws/HW00.md
@@ -60,6 +60,15 @@ _Due: {{page.due_date}}_
 
 Please fill out this short [survey](https://forms.gle/gwCeMMZ5DdiKheCS6). Your answers will help your instructor get to know you and learn what you hope to get out of this course. This will help me modify the course to best fit your interests.
 
+## Growth mindset (2 points)
+Watch the following 10-minute video about a growth-mindset.
+
+<div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/carol_dweck_the_power_of_believing_that_you_can_improve" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+
+<br><br><br>
+Then, in a file called `GROWTH.txt`, define what a 'growth mindset' means to you in your own words. Then, explain how you intend to apply this concept in our class throughout the semester. 
+How do you think adopting a growth mindset can benefit your learning and performance in this course?
+
 ## Fortune Cookie! (5 points)
 
 Write a program, `Fortune.java`, which prints a fortune like the ones typically found in fortune cookies. Use the program as a starting point. 
@@ -141,12 +150,14 @@ are either excited about something that is not CS, or stems from an advanced top
 
 Submit the following files to the assignment called `HW00` on Gradescope:
 
+1. `GROWTH.txt`
 1. `Fortune.java`
 2. `ERRORS.txt` 
 3. `HW00_READING.txt`
 
 Make sure to name these files exactly what we specify here. Otherwise,
 our autograders might not work and we might have to take points off.
+**DO NOT** submit a *.docx* or *.pdf* file.
 
 #### Copying the files 
 You will likely want to submit the files from your own laptop/computer.
